# mcp-monumenten

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/mcp_monumenten/: __init__.py  __main__.py  _dev.py  server.py
