[project]
name = "mcp-monumenten"
version = "0.1.0"
description = "MCP server voor monumentale statussen in Nederland."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.12.3",
    "monumenten>=0.4.0",
]
license = {file = "LICENSE"}
authors = [
    {name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl"},
    {name = "Ben Verhees", email = "ben.verhees@woonstadrotterdam.nl"},
]
keywords = ["mcp", "monumenten", "rijksmonumenten", "kadaster", "gemeente"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
mcp-monumenten= "mcp_monumenten.__main__:main"

[build-system]
requires = ["setuptools"]
build-backed = "setuptools.build_meta"

[tools.setuptools]
package_dir = {"" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
